chore: rename app to Cherry Studio Pi
